update api asignment controller
